[package]
name = "gagl-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"

# Fixed rand configuration for wasm
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
getrandom = { version = "0.2.10", features = ["js"] }

[dependencies.web-sys]
version = "0.3.77"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGl2RenderingContext',
    'WebGlRenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'Window',
    'Performance',
    'console',
    'CssStyleDeclaration',
    'DomRect',
    'HtmlElement',
]

[profile.release]
opt-level = 3
lto = true
